@@ -1,3 +1,8 @@
+2019-06-12  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/90760
+	* gcc.dg/pr90760.c: New test.
+
 2019-06-11  Faraz Shahbazker  <fshahbazker@wavecomp.com>
 
 	* gcc.target/mips/data-sym-pool.c: Update expected output.
