@@ -1,3 +1,9 @@
+2019-06-12  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/90760
+	* symtab.c (symtab_node::set_section): Allow being called on aliases
+	as long as they aren't analyzed yet.
+
 2019-06-11  Faraz Shahbazker  <fshahbazker@wavecomp.com>
 
 	* config/mips/mips.c (mips_final_postscan_insn): Modify call
